--- a/src/app/result/result.component.html
+++ b/src/app/result/result.component.html
@@ -4,14 +4,17 @@
     <meta charset="UTF 8">
   </head>
   <body>
-    <h2>Simple Date Converter</h2>
+    <h2 style="text-align: center">Simple Date Converter</h2>
     <br>
     <br>
-      <h5>Converted Result</h5>
+    <div>
+        <h5 style="text-align: center">Converted Result</h5>
+        <br>
+        <script type="text/javascript">
+            document.writeln (GET('form1'));
+          </script>
+        <a style="text-align: center" href="../app.component.html">Back to home page</a>
       <br>
-      <div>
-      </div>
-      <a href="form.component.html">Back to home page</a>
-      <br>
+    </div>
   </body>
 </html>
